--- a/patient-service/pom.xml
+++ b/patient-service/pom.xml
@@ -86,6 +86,13 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<!--  using docApi and swagger-ui-->
+		   <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+      <version>2.8.8</version>
+   </dependency>
+
 	</dependencies>
 
 	<build>
